--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -271,6 +271,12 @@
 /** Used in HTML generated by Formats markdown -> html */
 @utility template-callout {
   @apply card-content my-4 border-s-4;
+  > *:first-child {
+    @apply mt-0 pt-0;
+  }
+  > *:last-child {
+    @apply mb-0 pb-0;
+  }
 }
 @layer components {
   .template-callout-tip {
